--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meal Dash</title>
+    <title>byFOOD</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
     </style>
+    <link rel="shortcut icon" href="/logo.png" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
