--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
     </style>
     <link rel="shortcut icon" href="/logo.png" type="image/x-icon">
+    <meta name="description" content="Your meal as it should be">
   </head>
   <body>
     <div id="root"></div>
